--- a/make-conda-fast-how-i-use-conda.html
+++ b/make-conda-fast-how-i-use-conda.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 8 seconds ago
+updated 11 days ago
 <span style="float:right">created: 27 January 2021
 </span>
 </div><div class=" tc-reveal">
