--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 3 months ago
+updated 2 minutes ago
 <span style="float:right">created: 12 October 2020
 </span>
 </div><div class=" tc-reveal">
@@ -66,28 +66,41 @@ Public
   
 
 
-</div><div class="tc-tiddler-body tc-reveal"><p><strong>About me</strong></p><p>Hi! Welcome to my small website. I'm currently a <a class="tc-tiddlylink-external" href="https://www.computationalpathologygroup.eu/members/hans-pinckaers/" rel="noopener noreferrer" target="_blank">PhD candidate</a> working on deep learning in medical imaging (specifically histopathology), at an <a class="tc-tiddlylink-external" href="https://radboudumc.nl" rel="noopener noreferrer" target="_blank">university hospital</a> in The Netherlands.</p><p><strong>Public notes</strong>
-<br></p><p><ul>
+</div><div class="tc-tiddler-body tc-reveal"><p><strong>About me</strong></p><p>Hi! Welcome to my small website. I'm currently a <a class="tc-tiddlylink-external" href="https://www.computationalpathologygroup.eu/members/hans-pinckaers/" rel="noopener noreferrer" target="_blank">PhD candidate</a> working on deep learning in medical imaging (specifically histopathology), at an <a class="tc-tiddlylink-external" href="https://radboudumc.nl" rel="noopener noreferrer" target="_blank">university hospital</a> in The Netherlands.</p><h2 class="">Public notes</h2><p><strong>Coffee stuff</strong>
+<br>
+<ul>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">[Coffee] Decaffeinated coffee beans  — sources in The Netherlands</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./decaffeinated-coffee-beans-sources-in-the-netherlands">Decaffeinated coffee beans  — sources in The Netherlands </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./fixing-coc-pyright-and-anaconda-import-errors">[Vim] Fixing coc-pyright and anaconda import errors</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">My coffee gear </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">[TiddlyWiki] Host tiddlywiki for free with authentication on alwaysdata</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./notes-on-dialing-in-an-espresso">Notes on dialing in an espresso </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./make-conda-fast-how-i-use-conda">[Python] Make conda fast — how I use conda</a></li>
+</ul></p><p><strong>Deep learning stuff</strong>
+<br>
+<ul>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./my-coffee-gear">[Coffee] My coffee gear</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./papers-on-concept-activation-vectors">Papers on Concept Activation Vectors </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./notes-on-dialing-in-an-espresso">[Coffee] Notes on dialing in an espresso</a></li>
+</ul></p><p><strong>Programming stuff</strong>
+<br>
+<ul>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./papers-on-concept-activation-vectors">[Deep learning] Papers on Concept Activation Vectors</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./fixing-coc-pyright-and-anaconda-import-errors">Fixing coc-pyright and anaconda import errors </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu">[Photography] Using a Sony alpha camera as a webcam in Ubuntu</a></li>
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./make-conda-fast-how-i-use-conda">Make conda fast — how I use conda </a></li>
 
-<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-macos-catalina">[Photography] Using a Sony alpha camera as a webcam in macOS Catalina</a></li>
+</ul></p><p><strong>Other stuff</strong>
+<br>
+<ul>
 
-</ul></p><p><strong>My research</strong></p><p>My PhD, so far, has been about  training a network memory efficient, resulting in a novel method which gives the possibility to train a  ResNet34 with gigantic images (up to 268 megapixels) end-to-end with a single label per image.
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./host-tiddlywiki-for-free-with-authentication-on-alwaysdata">Host tiddlywiki for free with authentication on alwaysdata </a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-ubuntu">Using a Sony alpha camera as a webcam in Ubuntu </a></li>
+
+<li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./using-a-sony-alpha-camera-as-a-webcam-in-macos-catalina">Using a Sony alpha camera as a webcam in macOS Catalina </a></li>
+
+</ul></p><h2 class="">My research</h2><p>My PhD, so far, has been about  training a network memory efficient, resulting in a novel method which gives the possibility to train a  ResNet34 with gigantic images (up to 268 megapixels) end-to-end with a single label per image.
 <br></p><ul><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./training-convolutional-neural-networks-with-megapixel-images">Training convolutional neural networks with megapixel images</a><ul><li>First proof of concept of my method to train memory efficiently. </li><li>Published at the <a class="tc-tiddlylink-external" href="https://2020.midl.io/" rel="noopener noreferrer" target="_blank">MIDL 2018</a> conference.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./streaming-convolutional-neural-networks-for-end-to-end-learning-with-multi-megapixel-images">Streaming convolutional neural networks for end-to-end learning with multi-megapixel images</a><ul><li>Full paper about the method. </li><li><strong>Read this if you want to know how it works.</strong></li><li>Published in <a class="tc-tiddlylink-external" href="https://doi.org/10.1109/TPAMI.2020.3019563" rel="noopener noreferrer" target="_blank">IEEE Transactions on Pattern Analysis and Machine Intelligence</a>. Read older preprint at <a class="tc-tiddlylink-external" href="https://arxiv.org/abs/1911.04432" rel="noopener noreferrer" target="_blank">arXiv</a></li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./high-resolution-whole-prostate-biopsy-classification-using-streaming-stochastic-gradient-descent">High resolution whole prostate biopsy classification using streaming stochastic gradient descent</a><ul><li>First real application of the method. </li><li>Published at <a class="tc-tiddlylink-external" href="https://geertlitjens.nl/publication/pinc-19/pinc-19.pdf" rel="noopener noreferrer" target="_blank">SPIE Medical Imaging 2019</a>.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./detection-of-prostate-cancer-in-whole-slide-images-through-end-to-end-training-with-image-level-labels">Detection of prostate cancer in whole-slide images through end-to-end training with image-level labels</a><ul><li>Full paper about the application on prostate biopsies</li><li>Currently in review.</li></ul></li><li><a class="tc-tiddlylink tc-tiddlylink-resolves" href="./neural-ordinary-differential-equations-for-semantic-segmentation-of-individual-colon-glands">Neural Ordinary Differential Equations for Semantic Segmentation of Individual Colon Glands</a><ul><li>Fun little sideproject </li><li>Published in <a class="tc-tiddlylink-external" href="https://sites.google.com/view/med-neurips-2019" rel="noopener noreferrer" target="_blank">Medical Imaging meets NeurIPS - 2019</a></li></ul></li></ul></div>
 
 
