--- a/regression-with-fast-ai.html
+++ b/regression-with-fast-ai.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 2 minutes ago
+updated 2 days ago
 <span style="float:right">created: 26 February 2021
 </span>
 </div><div class=" tc-reveal">
