--- a/use-fast-ai-transforms-with-regular-pytorch.html
+++ b/use-fast-ai-transforms-with-regular-pytorch.html
@@ -43,7 +43,7 @@
 <a class="tc-tiddlylink tc-tiddlylink-missing" href="./hanspinckaers">
 hanspinckaers
 </a>
-updated 4 minutes ago
+updated 2 days ago
 <span style="float:right">created: 02 March 2021
 </span>
 </div><div class=" tc-reveal">
